<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context="com.tugasakhir.turnamensiamember.View.Authentication.RegisterFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_input_layout_email"
        android:theme="@style/textInputLayoutStyle">

        <EditText
            android:id="@+id/new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:hint="@string/name"
            android:padding="@dimen/text_padding"
            android:textColor="@color/colorTextLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/text_input_layout_password"
        android:theme="@style/textInputLayoutStyle">

        <EditText
            android:id="@+id/new_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_email_white_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/text_padding"
            android:textColor="@color/colorTextLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:theme="@style/textInputLayoutStyle">

        <EditText
            android:id="@+id/new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_vpn_key_white_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/text_padding"
            android:textColor="@color/colorTextLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_password"
        android:theme="@style/textInputLayoutStyle">

        <EditText
            android:id="@+id/new_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_vpn_key_white_24dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="@dimen/text_padding"
            android:textColor="@color/colorTextLight" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_new_password"
        android:layout_marginTop="16dp"
        android:background="@drawable/linear_gradient_orange"
        android:text="@string/sign_up"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/note_book_only_participant_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/sign_up"
        android:layout_marginTop="8dp"
        android:text="*Only As Participant"
        android:textColor="@color/colorTextLight"
        android:textStyle="bold" />
</RelativeLayout>
