<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:paddingLeft="32dp"
    android:paddingRight="32dp"
    tools:context="com.tugasakhir.turnamensiamember.View.Authentication.LoginFragment">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_above="@+id/text_input_layout_email"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/container_margin"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/dota_battleground" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/container_margin"
        android:theme="@style/textInputLayoutStyle">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_person_white_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_person_white_24dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="@dimen/text_padding"
            android:textColor="@color/colorTextLight" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_email"
        android:theme="@style/textInputLayoutStyle">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_vpn_key_white_24dp"
            android:drawablePadding="@dimen/icon_padding"
            android:drawableStart="@drawable/ic_vpn_key_white_24dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="@dimen/text_padding"
            android:textColor="@color/colorTextLight" />
    </android.support.design.widget.TextInputLayout>

    <CheckBox
        android:id="@+id/organizer_ind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_input_layout_password"
        android:layout_marginTop="8dp"
        android:text="Sign In As Organizer"
        android:textColor="@color/colorTextLight"
        android:theme="@style/checkBoxStyle" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/organizer_ind"
        android:layout_marginTop="16dp"
        android:background="@drawable/linear_gradient_orange"
        android:text="@string/sign_in"
        android:textColor="@color/colorTextLight"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/sign_in"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp">

        <TextView
            android:id="@+id/new_user_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="8dp"
            android:text="New on Dota Battleground?"
            android:textColor="@color/colorTextLight" />

        <TextView
            android:id="@+id/new_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/new_user_intro"
            android:text="Sign Up"
            android:textColor="@color/colorTextLight"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>
